--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -13,24 +13,32 @@ $breakpoint argument choices:
 - tab-port
 - tab-land
 - big-desktop
+
+
+ORDER of applying the media queries
+- base + typography
+- general layout + grid
+- page layout
+- components
+
  
 */
 @mixin respond ($breakpoint) {
 
     @if $breakpoint == iPhone5 {
-        @media (max-width: 20em) { @content};  //320px
+        @media only screen and (max-width: 20em) { @content};  //320px
     }
 
     @if $breakpoint == phone {
-        @media (max-width: 37.5em) { @content};  //600px
+        @media only screen and (max-width: 37.5em) { @content};  //600px
     }
 
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) { @content};  //900px
+        @media only screen and (max-width: 56.25em) { @content};  //900px
     }
 
     @if $breakpoint == tab-land {
-        @media (max-width: 75em) { @content};  //1200px
+        @media only screen and (max-width: 75em) { @content};  //1200px
     }
 
     @if $breakpoint == big-desktop {
